added files for finalclock

--- a/bindings/python/samples/clockconfig.ini
+++ b/bindings/python/samples/clockconfig.ini
@@ -8,11 +8,14 @@ led_parallel = 3
 led_brightness = 20
 led_slowdown_gpio = 4
 led_multiplexing = 1
-led_pixel_mapper = "Rotate:180"
+led_pixel_mapper = Rotate:180
+clock_id = 1
 
 [ClockSystem]
-ip_clock = "192.168.2.5"
+ip_clock = 192.168.2.5
 
 [Horn]
-serial_port = '/dev/ttyACM0'
+serial_port = /dev/ttyACM0
+
+
 
